# me3

./: .bazelrc  .blaim  .gitignore  .prettierignore  ABOUT.md  BUILD.bazel  MODULE.bazel  Makefile  README.md  WORKSPACE  go.mod  go.sum  go_repositories.bzl  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.in  requirements.txt  tsconfig.json
.github/workflows/: push.yaml
bazel/tools/format/: BUILD.bazel
bazel/tools/go/: BUILD.bazel
bazel/tools/npm/: BUILD.bazel
bazel/tools/npx/: BUILD.bazel
blaim/: BUILD.bazel  README.md  blaim.go  blaim_test.go
blaim/cmd/: BUILD.bazel  main.go  main_test.go
blaim/cmd/testdata/: diff.txt  expected_annotate.txt  expected_blaim.json  playground.js
blaim/vscode-extension/: README.md  package-lock.json  package.json  playground.js  vscode.proposed.inlineCompletionsAdditions.d.ts
blaim/vscode-extension/src/: acceptlog.ts  asynclock.ts  decorator.ts  extension.ts  git.d.ts
codenames/: BUILD.bazel  board.py  codenames.py  fetch_nltk_data.py  player_nltk.py  player_word2vec.py  powerset.py
codenames-go/: BUILD.bazel  README.md  codenames.go  codenames_test.go  interactive_player.go  ollama_player.go  retry.go  retry_test.go
cpp/: BUILD.bazel  hello_world.cc
cpp/lib/: BUILD.bazel  word_generator.cc  word_generator.h  word_generator_benchmark.cc  word_generator_test.cc
gencommitmsg/: BUILD.bazel  main.go
hooks/: prepare-commit-msg
journ/: BUILD.bazel  journ.go
journ/testdata/: key.txt  plaintext-input.txt
langchain/: BUILD.bazel  demo.py
pool/: BUILD.bazel  index.test.ts  index.ts  jest.config.js
resume/: sean_mccullough_cv.tex
