###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
module(name="me3", version = "0.1")
# bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "googletest", version = "1.12.1", repo_name = "com_google_googletest", dev_dependency = True)
bazel_dep(name = "google_benchmark", version = "1.8.3", repo_name = "com_github_google_benchmark", dev_dependency = True)
bazel_dep(name = "abseil-cpp", version = "20240116.1", repo_name = "com_google_absl")

bazel_dep(name = "aspect_rules_ts", version = "3.0.0-rc0")
rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = True)
rules_ts_ext.deps()
use_repo(rules_ts_ext, "npm_typescript")