load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "blaim",
    srcs = ["blaim.go"],
    importpath = "github.com/banksean/me3/blaim",
    visibility = ["//visibility:public"],
)

go_test(
    name = "blaim_test",
    srcs = ["blaim_test.go"],
    embed = [":blaim"],
)
