load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "codenames-go_lib",
    srcs = ["codenames.go"],
    embedsrcs = ["wordlist.txt"],
    importpath = "github.com/banksean/me3/codenames-go",
    visibility = ["//visibility:private"],
    deps = ["@com_github_jedib0t_go_pretty_v6//table"],
)

go_binary(
    name = "codenames-go",
    embed = [":codenames-go_lib"],
    visibility = ["//visibility:public"],
)
