load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "gencommitmsg_lib",
    srcs = ["main.go"],
    importpath = "github.com/banksean/me3/gencommitmsg",
    visibility = ["//visibility:private"],
    deps = ["@com_github_sashabaranov_go_openai//:go-openai"],
)

go_binary(
    name = "gencommitmsg",
    embed = [":gencommitmsg_lib"],
    visibility = ["//visibility:public"],
)
