load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_jest//jest:defs.bzl", "jest_test")

ts_project(
    name = "transpile",
    srcs = ["index.ts"],
    allow_js = True,
    declaration = True,
    resolve_json_module = True,
    transpiler = "tsc",
    tsconfig = "//:ts_config",
)

jest_test(
    name = "test",
    node_modules = "//:node_modules",
    config = "jest.config.js",
    data = [
        "index.ts", # the test file below depends on this file
        "index.test.ts",
    ],
)