load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/banksean/me3/blaim/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//blaim",
        "@com_github_sourcegraph_go_diff//diff",
        "@com_github_urfave_cli_v2//:cli",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
