load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/banksean/me3/blaim/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//blaim",
        "@com_github_lithammer_fuzzysearch//fuzzy",
        "@com_github_sourcegraph_go_diff//diff",
        "@com_github_urfave_cli_v2//:cli",
        "@in_gopkg_vmarkovtsev_go_lcss_v1//:go-lcss_v1",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "cmd_test",
    srcs = ["main_test.go"],
    data = glob(["testdata/**"]),
    embed = [":cmd_lib"],
    embedsrcs = [
        "testdata/accepted.suggestions.log",
        "testdata/diff.txt",
        "testdata/expected_blaim.json",
    ],
)
