cc_test(
    name = "test",
    srcs = ["word_generator_test.cc"],
    copts = ["-Iexternal/gtest/include"],
    deps = [
        "//cpp/lib",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "benchmark",
    srcs = ["word_generator_benchmark.cc"],
    copts = ["-Iexternal/benchmark/include"],
    deps = [
        "//cpp/lib",
        "@com_github_google_benchmark//:benchmark_main",
    ],
)

cc_library(
    name = "lib",
    srcs = glob(["word_generator.cc"]),
    hdrs = glob(["word_generator.h"]),
    copts = [
        "-std=c++20",
    ],
    visibility = [
        "//cpp:__pkg__",
    ],
)
