load("@aspect_rules_lint//format:defs.bzl", "format_multirun")
load("@aspect_rules_lint//lint:ruff.bzl", "ruff_aspect")
load("@npm//:prettier/package_json.bzl", prettier = "bin")

ruff = ruff_aspect(
    binary = "@@//:ruff",
    configs = "@@//:.ruff.toml",
)

prettier.prettier_binary(
    name = "prettier",
    # Allow the binary to be run outside bazel
    env = {"BAZEL_BINDIR": "."},
)

format_multirun(
    name = "format",
    javascript = ":prettier",
    go = "@go_sdk//:bin/gofmt",
    python = ":ruff",
    visibility = ["//visibility:public"],
)

load("@aspect_rules_lint//format:defs.bzl", "format_test")

format_test(
    name = "format_test",

    # register languages, e.g.
    # python = "//:ruff",
    no_sandbox = True,
    workspace = "//:WORKSPACE",
)
